--- a/styles/full.less
+++ b/styles/full.less
@@ -4,7 +4,7 @@
  your css from affecting other integrations.  Note that the integration id is based off the name of the integration
  directory.
 */
-.shodan-integration {
+.fullContact-integration {
 }
 
 div.gender {
